sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:7: error: value += is not a member of Int
      i+=1
       ^AlgGnomeSort:12: error: reassignment to val
      i=i-1
       ^