sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i:Int=0
  
  for(i<- 1 to getNombreValeurs-1){
    if (i==0){
      i+=1
    }else if(i==getNombreValeurs){
        return
    }else if(plusPetit(i,i-1)==false){
      echange(i,i-1)
      i=i-1
    }

    
    
  }
  
  
}